chore(neo4j): bump server to 2026.06.0 calendar monthly (ADR-067 § 3a) (#748)
Routine calendar-line bump: neo4j:2026.06.0's Docker image published
2026-07-16, so 2026.05.0 is now EOL-for-hotfixes.

- pins: infrastructure/docker-compose.yml, k8s-manifests.yml,
  docker-compose.production.yml (template), integration testcontainer
  (conftest) + version canary assert (2026.06.x)
- doc currency: CLAUDE.md, ADR-064/-067, app+infra READMEs, SETUP,
  deployment guides, NEO4J_QUERY_TIMEOUT, CYPHER_VS_APOC_STRATEGY,
  pytest skill docs
- NEO4J_SERVER_TUNING truth-fix (found during bump verification): the
  image DOES ship ~22 default server.jvm.additional lines (2026.05.0
  and 2026.06.0 alike) — they never reached the live JVM because the
  empty infrastructure/neo4j/conf/ mount makes the entrypoint wipe the
  vendor conf on boot; the env var itself is append-not-replace.
  Restoring vendor JVM flags is flagged as a separate tuning decision.
- driver stays neo4j==5.26.0 (DECOUPLED, ADR-067 § 3)

Verified: pre-upgrade backup taken (data.2026.05.0.pre-upgrade.tgz);
forward in-place store migration (4423 nodes intact, vector index
queries return hits, --add-modules jdk.incubator.vector live in JVM,
zero Vector API warnings, apoc.meta.* working); ./dev quality all
green; integration suite 993 passed (one first-run flake in
test_askesis_ask_endpoint passed in isolation and on full re-run).

Co-authored-by: Claude Fable 5 <noreply@anthropic.com>